<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/menu_language"
            android:icon="@drawable/baseline_translate_black_18dp"
            android:title="@string/change_language"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_notification"
            android:icon="@drawable/baseline_notifications_black_18dp"
            android:title="@string/notification_settings"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_favorite"
            android:icon="@drawable/baseline_favorite_black_18dp"
            android:title="@string/favorite"
            app:showAsAction="ifRoom" />
    </group>
</menu>