<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:elevation="6dp"
    android:layout_margin="2dp"
    app:cardCornerRadius="20dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="119dp"
            android:layout_height="129dp"
            android:id="@+id/imgAvatarDetail"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/baseline_person_search_black_18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.121" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUsernameDetail"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/teal_700"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgAvatarDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imgAvatarDetail"
            app:layout_constraintTop_toTopOf="@+id/imgAvatarDetail"
            app:layout_constraintVertical_bias="0.0" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgAvatarDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imgAvatarDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvUsernameDetail"
            app:layout_constraintVertical_bias="0.6">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tab_follower"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvFollowersDetail"
                    android:text="@string/numfollowers"
                    android:textSize="14sp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_following"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvFollowingDetail"
                    android:text="@string/numFollowing"
                    android:textSize="14sp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repository"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvRepositoryDetail"
                    android:text="@string/url"
                    android:textSize="14sp"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>